--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -39,7 +39,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="RepositoryModel\VideoGameDatabaseRepository.cs" />
+        <Compile Include="DatabaseContext\VideoGameDatabaseContext.cs" />
         <Compile Include="ServiceModels\VideoGameDatabaseService.cs" />
         <Compile Include="ServiceModels\VideoGameService.cs" />
         <Compile Include="VideoGameDatabaseModel\VideoGameDatabase.cs" />
